Disabling flickering test